@@ -763,7 +763,7 @@ struct DispatchRadixSort :
             if (d_temp_storage == NULL)
             {
                 temp_storage_bytes = 1;
-                return cudaSuccess;
+                break;
             }
 
             // Log single_tile_kernel configuration
